# tetris

./: PYGLET_MIGRATION.md  README.md  check_arcade.py  main.py  main_pyglet.py  pyglet_demo.py  pyproject.toml  run_tests.py  test_effects_in_game.py  test_line_explosion.py  test_visual_effects.py
debug/: debug_boundary.py  debug_collision.py  debug_collision2.py  debug_gameover.py  debug_next_piece_issue.py  debug_next_piece_render.py  debug_piece.py
src/tetris/: __init__.py  board.py  constants.py  effects.py  game.py  piece.py  pyglet_effects.py  pyglet_game.py  pyglet_renderer.py  renderer.py
src/tetris_pyglet/: __init__.py  board.py  constants.py  effects.py  piece.py  pyglet_game.py  renderer.py
tests/: __init__.py  demo_explosion_effect.py  demo_rainbow_wave_effect.py  pyglet_test_animation.py  pyglet_test_animation_no_text.py  pyglet_test_audio.py  pyglet_test_audio_simple.py  pyglet_test_basic.py  pyglet_test_minimal.py  pyglet_test_report.py  pyglet_test_simple.py  test_board.py  test_effect_position.py  test_effects_in_game.py  test_explosion_effect.py  test_game.py  test_line_explosion.py  test_piece.py  test_pyglet.py  test_real_position.py
tests/debug/: debug_empty_board.py  debug_next_piece.py  debug_test.py
